# spark

./: .gitignore  CHANGELOG.md  README.md  biome.json  examples.html  index.html  lefthook.yml  mkdocs.yml  package-lock.json  package.json  staticwebapp.config.json  tsconfig.json  vite.config.ts
.github/workflows/: azure-static-web-apps-nice-meadow-018297c00.yml  azure-static-web-apps.yml
cave-launcher/: main.js  package.json
docs/: distance-rescale-guide-ja.md  distance-rescale-guide.md  index.md
docs/docs/: 0.1-2.0-migration-guide.md  ext-splats.md  index.md  loading-splats.md  lod-getting-started.md  new-features-2.0.md  new-spark-renderer.md  packed-splats.md  spark-2.0-quick-start.md  (+4 more)
effects/: effects.json  index.html
examples/: assets.json  examples.json  index.html
rust/: .gitignore  Cargo.toml  build_rust_wasm.ps1  build_rust_wasm.sh
rust/.cargo/: config.toml
rust/build-lod/: Cargo.toml
rust/build-lod/src/: gpu_sh_clustering.rs  main.rs
rust/spark-internal-rs/: Cargo.toml
rust/spark-internal-rs/pkg/: package.json  spark_internal_rs.d.ts  spark_internal_rs.js  spark_internal_rs_bg.wasm  spark_internal_rs_bg.wasm.d.ts
rust/spark-internal-rs/src/: decoder.rs  ext_splats.rs  lib.rs  lod_tree.rs  loder.rs  packed_splats.rs  splats.rs
rust/spark-lib/: Cargo.toml
rust/spark-lib/src/: antisplat.rs  bhatt_lod.rs  chunk_tree.rs  csplat.rs  decoder.rs  gsplat.rs  ksplat.rs  lib.rs  ordering.rs  ply.rs  quick_lod.rs  rad.rs  sh_clustering.rs  sogs.rs  splat_encode.rs  spz.rs  symmat3.rs  tiny_lod.rs  tsplat.rs
rust/spark-rs/: Cargo.toml
rust/spark-rs/src/: lib.rs  lod_tree.rs  raycast.rs  sort.rs
rust/spark-worker-rs/: Cargo.toml
rust/spark-worker-rs/src/: ext_splats.rs  lib.rs  lod_tree.rs  packed_splats.rs  sort.rs
scripts/: copy-site-files.js  rename-assets-to-static.js  replace-urls.js
src/: BatchedSplat.ts  ExtSplats.ts  ForgeRenderer.ts  ILodScheduler.ts  ILodTraverser.ts  ISortProvider.ts  NewSparkRenderer.ts  NewSplatAccumulator.ts  NewSplatGeometry.ts  NewSplatWorker.ts  NewerSparkRenderer.ts  OldSparkRenderer.ts  OldSparkViewpoint.ts  OldSplatAccumulator.ts  OldSplatGeometry.ts  OldSplatWorker.ts  PackedSplats.ts  PlyWriter.ts  Readback.ts  RgbaArray.ts  SparkPortals.ts  SparkRenderer.ts  SparkViewpoint.ts  SparkXr.ts  Splat.ts  SplatAccumulator.ts  SplatEdit.ts  SplatGenerator.ts  SplatGeometry.ts  SplatLoader.ts  SplatMesh.ts  SplatPager.ts  SplatSkinning.ts  SplatSorter.ts  SplatTree.ts  SplatUtils.ts  SplatWorker.ts  WorkerLodTraverser.ts  WorkerSortProvider.ts  antisplat.ts  (+18 more)
test/: PlyWriter.test.ts  lodScheduler.test.ts
(+122 files in other folders)
