[workspace]
members = [
    "build-lod",
    "spark-internal-rs",
    "spark-lib",
]
resolver = "2"

[workspace.package]
rust-version = "1.82"
edition = "2021"
license = "Proprietary"
authors = ["World Labs Technologies"]
repository = "https://github.com/sparkjs-dev/spark"

[workspace.dependencies]
ahash = { version = "0.8.12", default-features = false, features = ["std", "compile-time-rng"] }
anyhow = "1.0.98"
#flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
glam = "0.30.8"
half = "2.6.0"
js-sys = "0.3.77"
miniz_oxide = "0.8.9"
ordered-float = "5.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-wasm-bindgen = "0.6.5"
smallvec = "1.15.1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
