[package]
name = "build-lod"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:half"]

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
spark-lib = { path = "../spark-lib" }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
half = { workspace = true, optional = true }
