[package]
name = "spark-lib"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
glam.workspace = true
half.workspace = true
ordered-float.workspace = true
miniz_oxide.workspace = true
serde.workspace = true
smallvec.workspace = true
